tests/NormalTests/paczka2/big_fuzzy/12916991.err
Error in line 1: cyWJ8oTM A597 33,23
Error in line 9: qNB5Cg S530 11,5
Error in line 3: lkUhFqRS S568 92,0
Error in line 26: yVIw S530 39,9
Error in line 55: yVIw A597 50,7
Error in line 62: lkUhFqRS S568 27,6
Error in line 64: cyWJ8oTM S530 13,7
Error in line 60: qNB5Cg S568 37,3
Error in line 67: cyWJ8oTM S568 45,3
Error in line 71: cyWJ8oTM A750 36,90
Error in line 68: qNB5Cg A750 31,3
Error in line 70: cyWJ8oTM A750 90,0
Error in line 82: S568 S568 300,07
Error in line 77: qNB5Cg S530 3,3
Error in line 81: cyWJ8oTM S568 14,9
Error in line 90: lkUhFqRS A750 86,5
Error in line 97: lkUhFqRS A597 23,6
Error in line 104: qNB5Cg S568 %6,6
Error in line 74: S568 S568 86,9
Error in line 95: 0WMh S530 46,5
Error in line 119: qNB5Cg S568 12,4
Error in line 131: 0WMh A750 10,3
Error in line 152: lkUhFqRS A597 17,5
Error in line 155: gW5V A597 49,2
Error in line 154: lkUhFqRS A750 9,3
Error in line 172: qNB5Cg A597 179,42
Error in line 161: 0WMh A597 0,3
Error in line 171: S568 S530 64,0
Error in line 176: yVIw A597 17,4
Error in line 165: cyWJ8oTM S568 7,1
Error in line 186: S568 S530 70,9
Error in line 169: qNB5Cg A597 64,0
Error in line 196: y?Iw S530 263,9
Error in line 188: yVIw S530 94,6
Error in line 199: qNB5Cg A597 17,3
Error in line 207: qNB5Cg A597 96,67
Error in line 216: qNB5Cg A597 -3,1
Error in line 221: lkUhFqRS A597 27,7
Error in line 205: qNB5Cg S568 76,6
Error in line 225: qNB5Cg S530 92,4
Error in line 228: gW5V S530 67,0
Error in line 246: 0WMh A597 2,7
Error in line 248: 0WMh S568 0,9
